[metadata]
name = bumpv
version = 0.3.0
url = https://github.com/kylie-a/bumpv
author_email = kylie.a@protonmail.com
license = MIT
description = Version-bump your software with a single command!
long_description = file: README.rst

[options]
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: PyPy
packages = find:
install_requires =
    Click
    pyaml

[options.entry_points]
console_scripts =
    bumpv = bumpv:bumpv

[wheel]
universal = 1

